load("//tools/base/bazel:maven.bzl", "maven_repo")
load("//tools/base/bazel:kotlin.bzl", "kotlin_library")
load("//tools/base/bazel:coverage.bzl", "coverage_java_test")

#keep sorted
TEST_DEPS = [
    "//tools/base/annotations",
    "//tools/base/build-system:gradle-api",
    "//tools/base/build-system/builder",
    "//tools/base/build-system/builder-model",
    "//tools/base/build-system/builder-test-api:tools.builder-test-api",
    "//tools/base/build-system/gradle-api",
    "//tools/base/build-system/gradle-core",
    "//tools/base/build-system/integration-test/framework",
    "//tools/base/common:tools.common",
    "//tools/base/ddmlib:tools.ddmlib",
    "//tools/base/repository:tools.repository",
    "//tools/base/sdk-common:tools.sdk-common",
    "//tools/base/sdklib:tools.sdklib",
    "//tools/base/testutils:tools.testutils",
    "@maven//:com.google.guava.guava",
    "@maven//:com.google.truth.extensions.truth-java8-extension",
    "@maven//:com.google.truth.truth",
    "@maven//:commons-io.commons-io",
    "@maven//:org.jetbrains.kotlin.kotlin-stdlib",
    "@maven//:org.jetbrains.kotlin.kotlin-test",
]

#keep sorted
TEST_DATA = [
    ":prebuilts",
    "//prebuilts/studio/sdk:build-tools/latest",
    "//prebuilts/studio/sdk:platforms/android-27_build_only",
    "//prebuilts/studio/sdk:platforms/latest",
    "//tools/base/build-system:gradle-distrib",
    "//tools/base/build-system:gradle_plugin_repo",
    "//tools/base/build-system/integration-test:dagger_prebuilts",
    "//tools/base/build-system/integration-test:gradle_kotlin_dsl_prebuilts",
    "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
    "//tools/base/build-system/integration-test:support_library_latest",
    "//tools/base/build-system/integration-test:test-projects/databinding",
    "//tools/base/build-system/integration-test:test-projects/databindingAndDagger",
    "//tools/base/build-system/integration-test:test-projects/databindingAndJetifier",
    "//tools/base/build-system/integration-test:test-projects/databindingAndKotlin",
    "//tools/base/build-system/integration-test:test-projects/databindingMultiModule",
    "//tools/base/build-system/integration-test:test-projects/databindingWithDynamicFeatures",
    "//tools/data-binding:data_binding_runtime.zip",
    "//tools/data-binding:integration-test-projects",
    "//tools/data-binding:integration-test-projects-support",
]

java_library(
    name = "java_tests",
    srcs = glob(["src/test/java/**/*.java"]),
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

kotlin_library(
    name = "kotlin_tests",
    srcs = glob(["src/test/java/**/*.kt"]),
    deps = TEST_DEPS,
)

coverage_java_test(
    name = "tests",
    timeout = "long",
    data = TEST_DATA,
    jvm_flags = [
        "-Dtest.suite.jar=tests.jar",
        "-Dfile.encoding=UTF-8",
        "-Dsun.jnu.encoding=UTF-8",
        "-Dmaven.repo.local=/tmp/localMavenRepo",  # For gradle publishing, writing to ~/.m2
        "-Dtest.android.build.gradle.integration.repos=tools/base/build-system/gradle_plugin_repo.manifest,tools/base/build-system/integration-test/databinding/prebuilts.manifest,tools/data-binding/data_binding_runtime.zip,tools/base/build-system/integration-test/support_library_latest.manifest,tools/base/build-system/integration-test/dagger_prebuilts.manifest,tools/base/build-system/integration-test/kotlin_gradle_plugin_prebuilts.manifest,tools/base/build-system/integration-test/gradle_kotlin_dsl_prebuilts.manifest",
    ],
    shard_count = 8,
    tags = [
        "block-network",
        "cpu:3",
        "gradle_integration",
        "no_test_mac",  # b/69151132 Time out frequently when run on mac.
        "slow",
    ],
    test_class = "com.android.build.gradle.integration.BazelIntegrationTestsSuite",
    runtime_deps = [
        # Need to put this on the classpath before TestRunner_deploy.jar which contains
        # old JUnit classes. See https://github.com/bazelbuild/bazel/issues/2146.
        "@maven//:junit.junit",
        ":java_tests",
        ":kotlin_tests",
    ],
)

# Maven repo with dependencies required by data binding test projects.
#
# TODO: Clean this up to the minimum required for data binding.
maven_repo(
    name = "prebuilts",
    # keep sorted
    artifacts = [
        "//prebuilts/tools/common/m2:android.arch.core.common.1.0.0",
        "//prebuilts/tools/common/m2:android.arch.core.common.1.1.1",
        "//prebuilts/tools/common/m2:android.arch.core.runtime.1.0.0_aar",
        "//prebuilts/tools/common/m2:android.arch.core.runtime.1.1.1_aar",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.common.1.0.3",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.common.1.1.1",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.compiler.1.0.0",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.compiler.1.1.1",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.extensions.1.0.0_aar",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.extensions.1.1.1_aar",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.livedata.1.1.1_aar",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.livedata-core.1.1.1_aar",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.runtime.1.0.3_aar",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.runtime.1.1.1_aar",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.viewmodel.1.1.1_aar",
        "//prebuilts/tools/common/m2:androidx.activity.activity.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.annotation.annotation.1.0.0",
        "//prebuilts/tools/common/m2:androidx.annotation.annotation.1.1.0",
        "//prebuilts/tools/common/m2:androidx.appcompat.appcompat.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.appcompat.appcompat.1.0.2_aar",
        "//prebuilts/tools/common/m2:androidx.appcompat.appcompat.1.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.appcompat.appcompat-resources.1.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.arch.core.core-common.2.0.0",
        "//prebuilts/tools/common/m2:androidx.arch.core.core-common.2.1.0",
        "//prebuilts/tools/common/m2:androidx.arch.core.core-runtime.2.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.arch.core.core-runtime.2.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.asynclayoutinflater.asynclayoutinflater.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.cardview.cardview.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.collection.collection.1.0.0",
        "//prebuilts/tools/common/m2:androidx.collection.collection.1.1.0",
        "//prebuilts/tools/common/m2:androidx.constraintlayout.constraintlayout.1.1.3_aar",
        "//prebuilts/tools/common/m2:androidx.constraintlayout.constraintlayout-solver.1.1.3",
        "//prebuilts/tools/common/m2:androidx.coordinatorlayout.coordinatorlayout.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.core.core.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.core.core.1.0.1_aar",
        "//prebuilts/tools/common/m2:androidx.core.core.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.core.core.1.3.0_aar",
        "//prebuilts/tools/common/m2:androidx.cursoradapter.cursoradapter.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.customview.customview.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.documentfile.documentfile.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.drawerlayout.drawerlayout.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.fragment.fragment.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.fragment.fragment.1.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.interpolator.interpolator.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.legacy.legacy-support-core-ui.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.legacy.legacy-support-core-utils.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-common.2.2.0",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-extensions.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata.2.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata-core.2.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata-core.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata-core-ktx.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata-ktx.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-process.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-runtime.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-runtime-ktx.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-service.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel.2.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel-ktx.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel-savedstate.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel-savedstate.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.loader.loader.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.localbroadcastmanager.localbroadcastmanager.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.preference.preference.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.print.print.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.recyclerview.recyclerview.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.savedstate.savedstate.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.slidingpanelayout.slidingpanelayout.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.swiperefreshlayout.swiperefreshlayout.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.espresso.espresso-core.3.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.espresso.espresso-idling-resource.3.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.monitor.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.rules.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.runner.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.transition.transition.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.vectordrawable.vectordrawable.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.vectordrawable.vectordrawable.1.0.1_aar",
        "//prebuilts/tools/common/m2:androidx.vectordrawable.vectordrawable.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.vectordrawable.vectordrawable-animated.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.vectordrawable.vectordrawable-animated.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.versionedparcelable.versionedparcelable.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.versionedparcelable.versionedparcelable.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.viewpager.viewpager.1.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.animated-vector-drawable.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.animated-vector-drawable.27.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.appcompat-v7.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.asynclayoutinflater.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.cardview-v7.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.collections.28.0.0",
        "//prebuilts/tools/common/m2:com.android.support.constraint.constraint-layout.1.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.constraint.constraint-layout-solver.1.0.2",
        "//prebuilts/tools/common/m2:com.android.support.coordinatorlayout.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.cursoradapter.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.customview.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.documentfile.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.drawerlayout.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.interpolator.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.loader.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.localbroadcastmanager.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.print.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.slidingpanelayout.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-annotations.25.4.0",
        "//prebuilts/tools/common/m2:com.android.support.support-annotations.26.1.0",
        "//prebuilts/tools/common/m2:com.android.support.support-annotations.28.0.0",
        "//prebuilts/tools/common/m2:com.android.support.support-compat.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-compat.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-core-ui.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-core-ui.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-core-utils.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-core-utils.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-fragment.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-fragment.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-media-compat.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-media-compat.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-v4.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-v4.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-vector-drawable.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.swiperefreshlayout.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.test.espresso.espresso-core.3.0.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.test.espresso.espresso-idling-resource.3.0.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.test.orchestrator.1.0.0_apk",
        "//prebuilts/tools/common/m2:com.android.support.test.rules.1.0.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.test.runner.1.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.test.runner.1.0.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.test.services.test-services.1.0.0_apk",
        "//prebuilts/tools/common/m2:com.android.support.versionedparcelable.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.viewpager.28.0.0_aar",
        "//prebuilts/tools/common/m2:com.android.tools.build.transform-api.1.5.0",
        "//prebuilts/tools/common/m2:com.google.code.findbugs.jsr305.1.3.9",
        "//prebuilts/tools/common/m2:com.google.code.findbugs.jsr305.2.0.1",
        "//prebuilts/tools/common/m2:com.google.code.findbugs.jsr305.3.0.1",
        "//prebuilts/tools/common/m2:com.google.dexmaker.dexmaker.1.2",
        "//prebuilts/tools/common/m2:com.google.dexmaker.dexmaker-mockito.1.2",
        "//prebuilts/tools/common/m2:com.squareup.javawriter.2.1.1",
        "//prebuilts/tools/common/m2:javax.annotation.javax.annotation-api.1.2",
        "//prebuilts/tools/common/m2:javax.annotation.jsr250-api.1.0",
        "//prebuilts/tools/common/m2:junit.junit.4.11",
        "//prebuilts/tools/common/m2:net.bytebuddy.byte-buddy.1.9.10",
        "//prebuilts/tools/common/m2:net.bytebuddy.byte-buddy-agent.1.9.10",
        "//prebuilts/tools/common/m2:org.hamcrest.hamcrest-integration.1.3",
        "//prebuilts/tools/common/m2:org.hamcrest.hamcrest-library.1.3",
        "//prebuilts/tools/common/m2:org.jetbrains.kotlinx.kotlinx-coroutines-android.1.4.1",
        "//prebuilts/tools/common/m2:org.jetbrains.kotlinx.kotlinx-coroutines-core.1.4.1",
        "//prebuilts/tools/common/m2:org.mockito.mockito-core.3.0.0",
        "//prebuilts/tools/common/m2:org.objenesis.objenesis.2.6",
        "//tools/base/testing-infrastructure/device-pool/device-provider",  # TODO: decouple
        "//tools/base/third_party:junit_junit",
    ],
    visibility = ["__subpackages__"],
)
