load("//tools/base/bazel:maven.bzl", "maven_repository")
load("//tools/base/bazel:kotlin.bzl", "kotlin_library")
load("//tools/base/bazel:coverage.bzl", "coverage_java_test")

#keep sorted
TEST_DEPS = [
    "//tools/base/annotations",
    "//tools/base/build-system:gradle-api",
    "//tools/base/build-system/builder",
    "//tools/base/build-system/builder-model",
    "//tools/base/build-system/builder-test-api:tools.builder-test-api",
    "//tools/base/build-system/gradle-api",
    "//tools/base/build-system/gradle-core",
    "//tools/base/build-system/integration-test/framework",
    "//tools/base/common:tools.common",
    "//tools/base/ddmlib:tools.ddmlib",
    "//tools/base/repository:tools.repository",
    "//tools/base/sdk-common:tools.sdk-common",
    "//tools/base/sdklib:tools.sdklib",
    "//tools/base/testutils:tools.testutils",
    "@maven//:com.google.guava.guava",
    "@maven//:com.google.truth.extensions.truth-java8-extension",
    "@maven//:com.google.truth.truth",
    "@maven//:commons-io.commons-io",
    "@maven//:org.jetbrains.kotlin.kotlin-stdlib",
    "@maven//:org.jetbrains.kotlin.kotlin-test",
]

#keep sorted
TEST_DATA = [
    ":prebuilts",
    "//prebuilts/studio/sdk:build-tools/latest",
    "//prebuilts/studio/sdk:platforms/android-27_build_only",
    "//tools/base/build-system:android_gradle_plugin.zip",
    "//tools/base/build-system:android_gradle_plugin_runtime_dependencies",
    "//tools/base/build-system:gradle-distrib",
    "//tools/base/build-system/integration-test:android_platform_for_tests",
    "//tools/base/build-system/integration-test:androidx_test_latest",
    "//tools/base/build-system/integration-test:dagger_prebuilts",
    "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
    "//tools/base/build-system/integration-test:support_library_latest",
    "//tools/base/build-system/integration-test:test-projects/databinding",
    "//tools/base/build-system/integration-test:test-projects/databindingAndDagger",
    "//tools/base/build-system/integration-test:test-projects/databindingAndJetifier",
    "//tools/base/build-system/integration-test:test-projects/databindingAndKotlin",
    "//tools/base/build-system/integration-test:test-projects/databindingMultiModule",
    "//tools/base/build-system/integration-test:test-projects/databindingWithDynamicFeatures",
    "//tools/data-binding:data_binding_runtime.zip",
    "//tools/data-binding:integration-test-projects",
    "//tools/data-binding:integration-test-projects-support",
]

java_library(
    name = "java_tests",
    srcs = glob(["src/test/java/**/*.java"]),
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

kotlin_library(
    name = "kotlin_tests",
    srcs = glob(["src/test/java/**/*.kt"]),
    deps = TEST_DEPS,
)

coverage_java_test(
    name = "tests",
    timeout = "long",
    data = TEST_DATA,
    jvm_flags = [
        "-Dtest.suite.jar=tests.jar",
        "-Dfile.encoding=UTF-8",
        "-Dsun.jnu.encoding=UTF-8",
        "-Dmaven.repo.local=/tmp/localMavenRepo",  # For gradle publishing, writing to ~/.m2
        "-Dtest.android.build.gradle.integration.repos=" +
        "tools/base/build-system/android_gradle_plugin.zip," +
        "tools/base/build-system/android_gradle_plugin_runtime_dependencies.manifest," +
        "tools/base/build-system/integration-test/databinding/prebuilts.manifest," +
        "tools/data-binding/data_binding_runtime.zip," +
        "tools/base/build-system/integration-test/support_library_latest.manifest," +
        "tools/base/build-system/integration-test/androidx_test_latest.manifest," +
        "tools/base/build-system/integration-test/dagger_prebuilts.manifest," +
        "tools/base/build-system/integration-test/kotlin_gradle_plugin_prebuilts.manifest",
    ],
    shard_count = 8,
    tags = [
        "block-network",
        "cpu:3",
        "gradle_integration",
        "no_test_mac",  # b/69151132 Time out frequently when run on mac.
        "slow",
    ],
    test_class = "com.android.build.gradle.integration.BazelIntegrationTestsSuite",
    runtime_deps = [
        # Need to put this on the classpath before TestRunner_deploy.jar which contains
        # old JUnit classes. See https://github.com/bazelbuild/bazel/issues/2146.
        "@maven//:junit.junit",
        ":java_tests",
        ":kotlin_tests",
    ],
)

# Maven repo with dependencies required by data binding test projects.
#
maven_repository(
    name = "prebuilts",
    # keep sorted
    artifacts = [
        "@maven//:android.arch.lifecycle.extensions_1.0.0",
        "@maven//:android.arch.lifecycle.runtime_1.0.3",
        "@maven//:androidx.appcompat.appcompat_1.0.0",
        "@maven//:androidx.appcompat.appcompat_1.0.2",
        "@maven//:androidx.appcompat.appcompat_1.2.0",
        "@maven//:androidx.cardview.cardview_1.0.0",
        "@maven//:androidx.collection.collection_1.0.0",
        "@maven//:androidx.lifecycle.lifecycle-extensions_2.2.0",
        "@maven//:androidx.lifecycle.lifecycle-livedata-ktx_2.3.1",
        "@maven//:androidx.lifecycle.lifecycle-livedata-ktx_2.4.0",
        "@maven//:androidx.lifecycle.lifecycle-process_2.4.0",
        "@maven//:androidx.lifecycle.lifecycle-runtime-ktx_2.4.0",
        "@maven//:androidx.lifecycle.lifecycle-runtime_2.4.0",
        "@maven//:androidx.lifecycle.lifecycle-service_2.4.0",
        "@maven//:androidx.lifecycle.lifecycle-viewmodel-ktx_2.4.0",
        "@maven//:androidx.preference.preference_1.0.0",
        "@maven//:androidx.test.espresso.espresso-core_3.1.0",
        "@maven//:com.android.support.appcompat-v7_26.1.0",
        "@maven//:com.android.support.constraint.constraint-layout_1.0.2",
        "@maven//:com.android.support.test.espresso.espresso-core_3.0.1",
        "@maven//:com.android.support.test.runner_1.0.1",
        "@maven//:org.jetbrains.kotlinx.kotlinx-coroutines-android_1.4.1",
    ],
    visibility = ["__subpackages__"],
)
