load("//tools/base/bazel:kotlin.bzl", "kotlin_library", "kotlin_test")

kotlin_library(
    name = "framework",
    srcs = glob([
        "src/main/java/**/*.kt",
        "src/main/java/**/*.java",
    ]),
    lint_baseline = "lint_baseline.xml",
    visibility = ["//tools/base/build-system/integration-test:__subpackages__"],
    deps = [
        "//tools/analytics-library/protos/src/main/proto",
        "//tools/apksig",
        "//tools/base/annotations",
        "//tools/base/build-system:gradle-api",
        "//tools/base/build-system/builder",
        "//tools/base/build-system/builder-model",
        "//tools/base/build-system/builder-test-api:tools.builder-test-api",
        "//tools/base/build-system/gradle-api",
        "//tools/base/build-system/gradle-core",
        "//tools/base/build-system/integration-test/framework/src/main/proto",
        "//tools/base/common:tools.common",
        "//tools/base/ddmlib:tools.ddmlib",
        "//tools/base/layoutlib-api:tools.layoutlib-api",
        "//tools/base/repository:tools.repository",
        "//tools/base/repository:tools.testlib",
        "//tools/base/sdk-common:tools.sdk-common",
        "//tools/base/sdklib:tools.sdklib",
        "//tools/base/testing-infrastructure/device-pool/device-provider",
        "//tools/base/testutils:tools.testutils",
        # Do not change order. jacoco-core depends on old version of ASM, which
        # should not come before this ASM in the classpath, or it will cause build
        # errors (Cannot find symbol: Opcodes.ASM7).
        "@maven//:org.ow2.asm.asm",
        "@maven//:org.ow2.asm.asm-tree",
        # You can change order after this line:
        "@maven//:com.google.apis.google-api-services-storage",
        "@maven//:com.google.protobuf.protobuf-java",
        "@maven//:com.google.protobuf.protobuf-java-util",
        "@maven//:com.google.truth.extensions.truth-java8-extension",
        "@maven//:com.google.truth.truth",
        "@maven//:commons-io.commons-io",  # TODO: remove?
        "@maven//:commons-lang.commons-lang",  # TODO: remove?
        "@maven//:org.jacoco.org.jacoco.agent",
        "@maven//:org.jacoco.org.jacoco.core",
        "@maven//:org.jacoco.org.jacoco.report",
        "@maven//:org.jetbrains.kotlin.kotlin-stdlib",
        "@maven//:org.jetbrains.kotlin.kotlin-stdlib-jdk7",
        "@maven//:org.jetbrains.kotlin.kotlin-stdlib-jdk8",
        "@maven//:org.smali.dexlib2",
    ],
)

kotlin_test(
    name = "framework_tests",
    srcs = glob([
        "src/test/java/**/*.kt",
        "src/test/java/**/*.java",
    ]),
    friends = [":framework"],
    jvm_flags = [
        "-Dtest.suite.jar=framework_tests.jar",
    ],
    resources = glob(["src/test/resources/**"]),
    test_class = "com.android.testutils.JarTestSuite",
    visibility = ["//tools/base/build-system/integration-test:__subpackages__"],
    deps = [
        ":framework",
        "//tools/analytics-library/protos/src/main/proto",
        "//tools/apksig",
        "//tools/base/annotations",
        "//tools/base/build-system:gradle-api",
        "//tools/base/build-system/builder-model",
        "//tools/base/build-system/builder-test-api:tools.builder-test-api",
        "//tools/base/build-system/gradle-api",
        "//tools/base/build-system/gradle-core",
        "//tools/base/build-system/integration-test/framework/src/main/proto",
        "//tools/base/common:tools.common",
        "//tools/base/ddmlib:tools.ddmlib",
        "//tools/base/repository:tools.repository",
        "//tools/base/sdk-common:tools.sdk-common",
        "//tools/base/sdklib:tools.sdklib",
        "//tools/base/testing-infrastructure/device-pool/device-provider",
        "//tools/base/testutils:tools.testutils",
        "@maven//:com.google.apis.google-api-services-storage",
        "@maven//:com.google.protobuf.protobuf-java",
        "@maven//:com.google.protobuf.protobuf-java-util",
        "@maven//:com.google.truth.extensions.truth-java8-extension",
        "@maven//:com.google.truth.truth",
        "@maven//:org.mockito.mockito-core",
        "@maven//:org.ow2.asm.asm",
        "@maven//:org.ow2.asm.asm-tree",
        "@maven//:org.smali.dexlib2",
    ],
)
